[package]
edition = "2021"
name = "ctclib-pp"
version = "0.2.0"
authors = ["Naomichi Agata <agatan039@gmail.com>", "Julien Abadji <aulien.jbadji@gmail.com>"]
license = "MIT"
repository = "https://github.com/Uinelj/ctclib"
description = "A collection of utilities related to CTC, with the goal of being fast and highly flexible, with perplexity scores for KenLMs models"
readme = "README.md"
categories = ["science", "mathematics", "algorithms"]
keywords = ["ctc", "beam-search", "KenLM"]

[[bench]]
harness = false
name = "decode"

[dependencies]
libm = "~0.2"
pdqselect = "~0.1"
thiserror = "1.0"
ordered-float = "2.0"

[dependencies.dhat]
optional = true
version = "0.3.0"

[dependencies.ctclib-kenlm-sys]
optional = true
path = "ctclib-kenlm-sys"
version = "0.1"

[dev-dependencies]
criterion = "0.3.5"

[features]
default = ["kenlm"]
dhat-heap = ["dhat"]
kenlm = ["ctclib-kenlm-sys"]
